# belajar_django_modular

./: .gitignore  Dockerfile  README.md  bun.lockb  default.nix  docker-compose.yml  flake.nix  package.json  pyproject.toml  run.sh
docker/: default.conf
src/: manage.py
src/app_dashboard/: apps.py  queries.py  urls.py  views.py
src/app_dashboard/migrations/: 0001_create_book_table.py  0002_pinjam_buku.py  0003_add_kolom_petugas.py
src/app_dashboard/templates/app_dashboard/: beranda.html  index.html  status.html
src/app_landing/: apps.py  form.py  urls.py  views.py
src/app_landing/static/app_landing/: style.css
src/app_landing/templates/admin/: login.html
src/app_landing/templates/app_landing/: about.html  gambar.html  index.html  semua.html  video.html
src/django_modular/: asgi.py  settings.py  urls.py  wsgi.py
