[project]
name = "belajar_django_modular"
version = "0.1.0"
description = "Belajar Django Modular"
authors = [
    {name = "Mashanz", email = "mangatkk@gmail.com"},
]
dependencies = [
    "django>=5.0.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
