[project]
name = "belajar_django_modular"
version = "1.1.1"
description = "Belajar Django Modular"
authors = [{ name = "Mashanz", email = "mangatkk@gmail.com" }]
dependencies = [
    "django==5.0.4",
    "django-environ==0.11.2",
    "psycopg-binary==3.1.19",
    "psycopg2-binary==2.9.9",
]
requires-python = "==3.11.8"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
dev = "pdm run src/manage.py runserver"
tw-watch = "bunx tailwindcss -i ./app.css -o ./src/app_landing/static/app_landing/tailwind.css --watch --minify"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
